use new aws-skd-bridge that has simple db stuff

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   },
   "require": {
     "aws/aws-sdk-php": "3.*",
+    "aws/aws-sdk-php-v3-bridge": "*",
     "slim/slim": "2.*",
     "propel/propel": "dev-master",
     "facebook/php-sdk-v4": "4.*",
